<resources>
    <string name="app_name">HomeCalc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_hint">Show Hints</string>
    <string name="action_collective">Show Collective View</string>
    <string name="action_separate">Show Separate View</string>

    <string name="menu_family_view">Family Report</string>
    <string name="menu_home">Add Data</string>
    <string name="menu_edit">Your Report</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_account">Account Details</string>
    <string name="menu_settings">Settings</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="username">Display Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_family">Family Unique ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_generate">Generate new ID</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="family_details">Family UID is Unique.\nYou can get one from the Family Administrator.\nIf not available, you can create a new one.\n\nThe ID can be entered by the user during creation of their account or through the \"Account Details\" page.\n\nFamily ID allows you to keep a track of data of other members in your family.</string>
    <string name="display_family">Family UID</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_uid">Change Family UID</string>
    <string name="show_uid">Show Family UID</string>
    <string name="hint_text1">Clicking on an entry in \"Your Report\", </string>
    <string name="hint_text2">Will open a \"Dialog box\" allowing you to edit the data. </string>
    <string name="default_loading">Loading. Please Wait…</string>
    <string name="title_settings_activity">Settings</string>


    <string name="pleasewait">Please Wait</string>
    <string name="loading">Fetching Data...</string>
    <string name="keep">Continue adding new items?</string>

    <string name="edit">Edit entry</string>

    <string name="confirm">Confirm Changes?</string>
    <string name="areyousure">Are you sure you want to apply the selected values?\n(Can not be reverted)</string>

    <string name="default_spinner">Select an option</string>
    <string name="category_0">Shopping</string>
    <string name="category_1">Groceries</string>
    <string name="category_2">Meat and Fish</string>
    <string name="category_3">Fruits and Vegetables</string>
    <string name="category_4">Entertainment</string>
    <string name="category_5">Electronics and Furniture</string>
    <string name="category_6">Transportation</string>
    <string name="category_7">Child Expenses</string>
    <string name="category_8">Pet Expenses</string>
    <string name="category_9">Bills/Recurring Expenses</string>
    <string name="category_10">Medicine</string>
    <string name="category_11">Misc</string>

    <string name="category">Categories</string>
    <string name="time">Date</string>
    <string name="price">Price</string>
    <string name="notes">Remarks</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="dark_mode_title">Toggle Dark Mode</string>
    <string name="accent_title">Accent Colors</string>
    <string name="currency_title">Default Currency</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
