<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ShowDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category_0"
                android:textAlignment="center"
                android:textSize="28dp" />

            <LinearLayout
                android:id="@+id/linearh0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datehead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Date"
                    android:textAlignment="center"
                    android:textSize="22dp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Notes"
                    android:textAlignment="center"
                    android:textSize="22dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category_1"
                android:textAlignment="center"
                android:textSize="28dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datehead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Date"
                    android:textAlignment="center"
                    android:textSize="22dp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Notes"
                    android:textAlignment="center"
                    android:textSize="22dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category_2"
                android:textAlignment="center"
                android:textSize="28dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datehead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Date"
                    android:textAlignment="center"
                    android:textSize="22dp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Notes"
                    android:textAlignment="center"
                    android:textSize="22dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_border"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/category_3"
                android:textAlignment="center"
                android:textSize="28dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datehead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Date"
                    android:textAlignment="center"
                    android:textSize="22dp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Price"
                    android:textAlignment="center"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:text="Notes"
                    android:textAlignment="center"
                    android:textSize="22dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>